update alignment on inputs to prevent jitter

--- a/src/app/verification/verification.component.scss
+++ b/src/app/verification/verification.component.scss
@@ -12,7 +12,7 @@
   }
 
   mat-radio-group {
-    margin-bottom: 42px;
+    margin-bottom: 46px;
 
     mat-radio-button {
       margin-right: 20px;
